# gh-tray-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  justfile
.github/workflows/: ci.yml  release.yml
Casks/: gh-tray.rb
Formula/: gh-tray.rb
assets/: AppIcon.icns
bucket/: gh-tray.json
docs/plans/: 2026-04-17-package-distribution-design.md  2026-04-17-package-distribution.md  2026-04-21-visual-app-packaging-design.md  2026-04-21-visual-app-packaging.md
scripts/: update-packaging.sh  update_cask.py  update_formula.py
scripts/tests/: test_update_cask.py  test_update_formula.py  test_update_packaging.sh
src/: config.rs  demo.rs  github.rs  logging.rs  main.rs  theme.rs  tray.rs  types.rs
