[package]
name = "gh-tray"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.22"
muda = "0.17"
global-hotkey = "0.7"
auto-launch = "0.6"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph = "0.2"
imageproc = "0.26"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"

[profile.release]
strip = true
lto = true
codegen-units = 1
