[package]
name = "gh-tray"
version = "0.0.6"
edition = "2024"
description = "Cross-platform system tray app monitoring GitHub PRs"

[dependencies]
tray-icon = "0.22"
muda = "0.17"
global-hotkey = "0.7"
auto-launch = "0.6"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph = "0.2"
imageproc = "0.26"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"

[profile.release]
strip = "debuginfo"
lto = "thin"

[package.metadata.bundle]
name = "gh-tray"
identifier = "io.github.jsfr.gh-tray"
icon = ["assets/AppIcon.icns", "assets/icon.ico"]
category = "public.app-category.developer-tools"
short_description = "Cross-platform system tray app monitoring GitHub PRs"
osx_minimum_system_version = "11.0"
osx_info_plist_exts = ["assets/macos/Info.plist.frag"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
